remove unused javascripts

--- a/mockup/menu.html
+++ b/mockup/menu.html
@@ -168,7 +168,8 @@
 </div>
 	
 <script src="javascripts/jquery.js"></script>
-<script src="javascripts/foundation.min.js"></script>
+<script src="javascripts/jquery.foundation.forms.js"></script>
+<script src="javascripts/jquery.foundation.orbit.js"></script>
 <script src="main.js"></script>
 
 </body>
