fix: missing close tag

--- a/mockup/index.html
+++ b/mockup/index.html
@@ -153,7 +153,7 @@
 					</div>
 				</div>
 			</div>
-			<p class="read-more right"><a href="menu.html">もっと見る</a>
+			<p class="read-more right"><a href="menu.html">もっと見る</a></p>
 			
 		</section>
 		
