--- a/mockup/olive.html
+++ b/mockup/olive.html
@@ -70,15 +70,13 @@
 		<section id="main" class="eight columns" role="main">
 			
 			<h1>オリーブの気持ち</h1>
-			<p>あいつも今すでにいわゆる誤解学という事の頃に尽さでです。向後今を自覚金は何しろその批評ありますかもがありて行かたをは見当いうたですから、全くにはきまっででだない。手に楽しむたのも単に直接がしきりにらしいだます。</p>
-			<h2>見出し2</h2>
-			<p>よく嘉納さんに発展生徒ぴたりお話を纏めまい右このお蔭私か注文をという肝教育らしいますないないが、この多数は私か日光言葉で答えて、岡田さんのはずを後れのここに何だか不奔走と済んてどこ事業を大拡張を穿いようにどうしてもお増減のなっなかっないて、幾分つるつる矛盾のしでして下さっない事で起しなん。ただただご自己を思っ方はそう幸福とありたて、どんな他がは考えるましてという手を思っでやろたでしょ。この時他の時同じ主義はあなたごろがなっますかと嘉納さんへいうたで、段の絶対なというお認定うたらなて、ただの以上に理非で偶然までの徳義心に場合して行くから、始終の前を弱らばその後にけっしてなりなたとつづいな事でので、ないですなばあいにくご人受けございことあるですあり。しかも徳義心か変か約束が描くだて、十一月ごろ後れにありてならならためをご立脚の今日にありなです。</p>
+			<h2>本場の石窯ナポリピッツァをぜひともご賞味ください。</h2>
+			<p>大正時代に建てられた赤レンガの倉庫を改装したカジュアル・イタリアンレストラン。<br />落ち着いた雰囲気の店内で本場の石窯で焼き上げた本格的なナポリピッツアをお楽しみください。</p>
+			<p>また、当店の契約農家が栽培している『新鮮』『安心』『安全』の無農薬野菜を使ったメニューも多数ご用意しております。</p>
+			<p><img style="float: left; margin: 10px;" src="images/olive_about_mark.png" alt="trattoria Sensazione di Olive" width="221" height="221">少人数でのプライベートなパーティーから大人数での賑やかなパーティーなども承っております。<br />お誕生日パーティーやママ友のランチなどに最適なお手軽ランチプラン。<br />結婚式の二次会や新年会・忘年会など、特別なパーティーには、ちょっと贅沢なディナープラン。<br />基本プランにフリードリンク（飲み放題）等のオプションを追加することも出来ますので、お客さまのご希望するプランをご用意できます。<br />まずは、当店のスタッフまでお気軽におたずねください。<br />当店専属のプランナーがお客さまのご要望をもとに企画・提案・お手伝いをさせていただきます。<br />料理のグレードアップやウエディングケーキ・バースデーケーキなど、シェフとパティシエに相談していただくことも可能です。<br />まずは、本格的なナポリピッツァを味わうカジュアル・パーティーを是非！<br />皆さまのご利用を心よりお待ちしております。</p>
 			<h3>見出し3</h3>
-			<p>今にはすでにいうからしゃべったないないないが、ほとんどおもに送らて把持は少しなくた事で。そうしてご発展にさてはいるたのたながら、ろをも、あああなたかなっば読んれずんなるられなだとかけから、是は云いばいなた。現に正しくは無論がたとして下さいたて、私をは当時中までそれのお活動はない限るしまいないまし。</p>
 			<h4>見出し4</h4>
-			<p>己はもう汚辱ののをご仕事は出来ながらくれるましだだですて、三三のがたのある程度かい摘んなという話たて、しかしどんな貧民の筆があっせて、どこかにあなたの光明を持をしていたものたですと附随それと講演しおくなな。否やがしかし嘉納君にそうしてさらに申し上げたのでなない。向さんもそう鷹狩の云って含まますのないたべき。（または道をあろ一方でたでてますは見えべきんて、）少しするあり基礎から、スコットの社会ばかりなっけれども打ちという、態度の話は事実の時だけ諦め行くので読みうて腐敗心えて行かたいについてお最後ないのませ。</p>
 			<h5>見出し5</h5>
-			<p>私はとうとう必竟をいうですように云わからいただきで事だてたとえばまだ熊本時分しなけれです。もしくはそう二人は権利に願って、以前がしばしば引越しなくたと訊いて、おかしいたですのでけれどもお焦燥より与えたです。機会の今に、その大学をほかでしまで、一生上に少し事実三一一年の進んばかりの国が、私か結びた圧迫を考えた場合もことにあるれるのうで、とにかく全く文学と面白いて、とんだ事に困るものが不都合あり悪いやむをえでしょませ。</p>
 			
 		</section>
 		
