Change title of entrance page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="description" content="">
 <meta name="author" content="concrete5 Japan user group">
 
-<title>concrete5 Book Download data</title>
+<title>concrete5 公式活用ガイドブック Chapter 04「オリジナルデザインのサイトを作る」</title>
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
