Update entrance page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="">
+<meta name="description" content="このページは、書籍『concrete5 公式活用ガイドブック』の購入者に向けた補足情報の提供、Chapter 04「オリジナルデザインのサイトを作る」で使用するサンプルサイトのデータをダウンロードできるページです。">
 <meta name="author" content="concrete5 Japan user group">
+<meta property="og:title" content="concrete5 公式活用ガイドブック サンプルデータダウンロード＆サポートページ" />
+<meta property="og:description" content="このページは、書籍『concrete5 公式活用ガイドブック』の購入者に向けた補足情報の提供、Chapter 04「オリジナルデザインのサイトを作る」で使用するサンプルサイトのデータをダウンロードできるページです。" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="http://book.concrete5-japan.org/" />
+<meta property="og:image" content="http://book.concrete5-japan.org/cover.png" />
+<meta property="fb:app_id" content="130482106997708" />
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@concrete5japan" />
 
-<title>concrete5 公式活用ガイドブック Chapter 04「オリジナルデザインのサイトを作る」</title>
+<title>concrete5 公式活用ガイドブック サンプルデータダウンロード＆サポートページ</title>
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
@@ -15,11 +23,20 @@
 </head>
 
 <body data-spy="scroll" data-target=".sidenav">
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=130482106997708";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 	<div class="container theme-showcase">
 		<div class="jumbotron">
 			<header>
 				<h1>concrete<span>5</span> 公式活用ガイドブック</h1>
-				<h2>Chapter 04「オリジナルデザインのサイトを作る」サポートページ</h2>
+				<h2>サンプルデータダウンロード＆サポートページ</h2>
 			</header>
 		</div>
 		<div class="row">
@@ -29,12 +46,17 @@
 						<li><a href="#book">書籍情報</a></li>
 						<li><a href="#view">サンプルウェブサイトを実際に見る</a></li>
 						<li><a href="#download">データダウンロード</a></li>
+						<li><a href="#movies">動画</a></li>
 						<li><a href="#license">ライセンス</a></li>
 						<li><a href="#link">リンク</a></li>
 					</ul>
 				</nav>
 			</div>
 			<div class="col-sm-9">
+				<a href="https://twitter.com/share" class="twitter-share-button" data-lang="ja" data-url="http://book.concrete5-japan.org/" data-hashtags="concrete5">ツイートする</a>
+				<div class="fb-like" data-href="http://book.concrete5-japan.org/" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
+				<hr />
+				<p>このページは、書籍『concrete5 公式活用ガイドブック』の購入者に向けた補足情報の提供、Chapter 04「オリジナルデザインのサイトを作る」で使用するサンプルサイトのデータをダウンロードできるページです。</p>
 				<section id="book" class="clearfix">
 					<div class="page-header">
 						<h3>書籍情報</h3>
@@ -83,6 +105,12 @@
   allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe> <iframe src="http://ghbtns.com/github-btn.html?user=concrete5japan&type=follow&count=true"
   allowtransparency="true" frameborder="0" scrolling="0" width="165" height="20"></iframe></p>
 				</section>
+				<section id="download">
+					<div class="page-header">
+						<h3>動画（準備中）</h3>
+					</div>
+					<p>書籍では紙面というメディアの関係上伝えきれなかった、実際にサンプルサイトのコンテンツをどのように入力しているか、といった動画をアップしてきたいと思います。</p>
+				</section>
 				<section id="license">
 					<div class="page-header">
 						<h3>ライセンス</h3>
@@ -101,7 +129,7 @@
 						<h3>リンク</h3>
 					</div>
 					<ul>
-						<li>マイナビ 書籍サポートサイト（準備中）</li>
+						<li>マイナビ 書籍サポートサイト（準備中）：誌面の訂正情報について掲載していきます。</li>
 						<li><a href="http://concrete5-japan.org/" target="_blank">concrete5 Japan 日本語公式サイト</a></li>
 					</ul>
 				</section>
@@ -109,7 +137,7 @@
 		</div>
 		<div class="row">
 			<div class="col-sm-12">
-				<small>Copyright &copy; concrete5 Japan. Photo <a href="http://www.flickr.com/photos/erix/6806010939/">by erix!, on Flickr</a></small>
+				<small>Copyright &copy; concrete5 Japan Users Group. Photo <a href="http://www.flickr.com/photos/erix/6806010939/">by erix!, on Flickr</a></small>
 			</div>
 		</div>
 	</div>
@@ -117,4 +145,5 @@
 
 <script src="http://code.jquery.com/jquery.js"></script>
 <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </html>
