--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=130482106997708";
+  js.src = "//connect.facebook.net/ja_JP/all.js#xfbml=1&appId=130482106997708";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
