Add hatena bookmark button to entrance page

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 			<div class="col-sm-9">
 				<a href="https://twitter.com/share" class="twitter-share-button" data-lang="ja" data-url="http://book.concrete5-japan.org/" data-hashtags="concrete5">ツイートする</a>
 				<div class="fb-like" data-href="http://book.concrete5-japan.org/" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
+				<a href="http://b.hatena.ne.jp/entry/http://book.concrete5-japan.org/" class="hatena-bookmark-button" data-hatena-bookmark-title="concrete5 公式活用ガイドブック サンプルデータダウンロード＆サポートページ" data-hatena-bookmark-layout="standard-balloon" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a>
 				<hr />
 				<p>このページは、書籍『concrete5 公式活用ガイドブック』の購入者に向けた補足情報の提供、Chapter 04「オリジナルデザインのサイトを作る」で使用するサンプルサイトのデータをダウンロードできるページです。</p>
 				<section id="book" class="clearfix">
@@ -146,4 +147,5 @@
 <script src="http://code.jquery.com/jquery.js"></script>
 <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
 </html>
