Fix anchor hash

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe> <iframe src="http://ghbtns.com/github-btn.html?user=concrete5japan&type=follow&count=true"
   allowtransparency="true" frameborder="0" scrolling="0" width="165" height="20"></iframe></p>
 				</section>
-				<section id="download">
+				<section id="movies">
 					<div class="page-header">
 						<h3>動画（準備中）</h3>
 					</div>
