Update front page

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 						<li><a href="#download">データダウンロード</a></li>
 						<li><a href="#movies">動画</a></li>
 						<li><a href="#license">ライセンス</a></li>
+						<li><a href="#tips-list">Tips一覧</a></li>
 						<li><a href="#link">リンク</a></li>
 					</ul>
 				</nav>
@@ -108,9 +109,24 @@
 				</section>
 				<section id="movies">
 					<div class="page-header">
-						<h3>動画（準備中）</h3>
+						<h3>動画</h3>
 					</div>
-					<p>書籍では紙面というメディアの関係上伝えきれなかった、実際にサンプルサイトのコンテンツをどのように入力しているか、といった動画をアップしてきたいと思います。</p>
+					<p>書籍では紙面というメディアの関係上伝えきれなかった内容を補足する動画をアップしてきたいと思います。</p>
+					<div class="row">
+						<div class="col-sm-6">
+							<div class="panel panel-default">
+								<div class="panel-heading">
+									<h3 class="panel-title">サンプルサイトのコンテンツ登録デモ</h3>
+								</div>
+								<div class="panel-body">
+									<p>本書で作成したテーマを適用したサイトにコンテンツを登録し、デザインを再現していく手順のデモ動画です。</p>
+									<div class="video-container">
+										準備中
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</section>
 				<section id="license">
 					<div class="page-header">
@@ -125,12 +141,154 @@
 						<li>@<a href="https://github.com/hissy">hissy</a></li>
 					</ul>
 				</section>
+				<section id="tips-list">
+					<div class="page-header">
+						<h3>Tips一覧</h3>
+					</div>
+					<p>書籍の目次にTipsのページ数が記載されていなくて不便だと思ったので、一覧を作成しました。</p>
+					<table class="table table-striped">
+						<thead>
+							<tr>
+								<th>No.</th>
+								<th>Name</th>
+								<th>Page</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>Tips01-01-001</td>
+								<td>concrete5の事例</td>
+								<td>007</td>
+							</tr>
+							<tr>
+								<td>Tips01-02-001</td>
+								<td>データベースの文字セット</td>
+								<td>008</td>
+							</tr>
+							<tr>
+								<td>Tips01-02-002</td>
+								<td>文字コードを確認する</td>
+								<td>011</td>
+							</tr>
+							<tr>
+								<td>Tips01-02-003</td>
+								<td>セキュリティー対策</td>
+								<td>016</td>
+							</tr>
+							<tr>
+								<td>Tips01-04-001</td>
+								<td>PHP5.3以前がインストールされている場合</td>
+								<td>026</td>
+							</tr>
+							<tr>
+								<td>Tips01-04-002</td>
+								<td>画面が文字化けしている場合</td>
+								<td>027</td>
+							</tr>
+							<tr>
+								<td>Tips02-03-001</td>
+								<td>ブロックの並び順を変更する</td>
+								<td>055</td>
+							</tr>
+							<tr>
+								<td>Tips02-03-002</td>
+								<td>オートナビに関連するページ属性</td>
+								<td>061</td>
+							</tr>
+							<tr>
+								<td>Column03-10-001</td>
+								<td>マーケットプレイスのカテゴリーの意味</td>
+								<td>133</td>
+							</tr>
+							<tr>
+								<td>Columns03-10-002</td>
+								<td>おすすめアドオン</td>
+								<td>134</td>
+							</tr>
+							<tr>
+								<td>Columns03-10-003</td>
+								<td>おすすめスマートフォン対応テーマ</td>
+								<td>136</td>
+							</tr>
+							<tr>
+								<td>Tips04-02-001</td>
+								<td>カスタマイズ可能なテーマを作成する</td>
+								<td>169</td>
+							</tr>
+							<tr>
+								<td>Tips04-02-002</td>
+								<td>テーマの作成に知っておくと便利なコードスニペット集</td>
+								<td>171</td>
+							</tr>
+							<tr>
+								<td>Tips04-03-001</td>
+								<td>コメントアウト</td>
+								<td>180</td>
+							</tr>
+							<tr>
+								<td>Tips04-03-002</td>
+								<td>ページ付けインターフェースのカスタマイズ</td>
+								<td>185</td>
+							</tr>
+							<tr>
+								<td>Tips04-03-003</td>
+								<td>日付の書式の指定方法</td>
+								<td>188</td>
+							</tr>
+							<tr>
+								<td>Exercise04-03-001</td>
+								<td>スライドショーのテンプレート</td>
+								<td>189</td>
+							</tr>
+							<tr>
+								<td>Tips04-03-004</td>
+								<td>エディタのスタイルをテーマに合わせる</td>
+								<td>203</td>
+							</tr>
+							<tr>
+								<td>Tips04-03-005</td>
+								<td>テーマにautonavを直接埋め込む</td>
+								<td>204</td>
+							</tr>
+							<tr>
+								<td>Tips04−03−006</td>
+								<td>ブロックテンプレートのカスタマイズに知っておくと便利なコードスニペット集</td>
+								<td>205</td>
+							</tr>
+							<tr>
+								<td>Tips05-01-001</td>
+								<td>キャッシュのクリア</td>
+								<td>210</td>
+							</tr>
+							<tr>
+								<td>Tips05-01-002</td>
+								<td>管理者以外のグループに管理画面へのアクセス権限を与えたい</td>
+								<td>218</td>
+							</tr>
+							<tr>
+								<td>Tips05-01-003</td>
+								<td>特定のグループにページタイプのデフォルトの編集権限を与えたい</td>
+								<td>219</td>
+							</tr>
+							<tr>
+								<td>Tips05-04-001</td>
+								<td>開発環境からサイトの公開時に公開用のサーバーに移設する際に気をつけること</td>
+								<td>247</td>
+							</tr>
+							<tr>
+								<td>Tips06-01-001</td>
+								<td>ソースコードでよく見る変数について</td>
+								<td>277</td>
+							</tr>
+						</tbody>
+					</table>
+				</section>
 				<section id="link">
 					<div class="page-header">
 						<h3>リンク</h3>
 					</div>
 					<ul>
-						<li>マイナビ 書籍サポートサイト（準備中）：誌面の訂正情報について掲載していきます。</li>
+						<li><a href="https://book.mynavi.jp/support/pc/4384/" target="_blank">マイナビ 書籍サポートサイト</a>：誌面の訂正情報について掲載していきます。</a></li>
 						<li><a href="http://concrete5-japan.org/" target="_blank">concrete5 Japan 日本語公式サイト</a></li>
 					</ul>
 				</section>
@@ -138,6 +296,7 @@
 		</div>
 		<div class="row">
 			<div class="col-sm-12">
+				<hr />
 				<small>Copyright &copy; concrete5 Japan Users Group. Photo <a href="http://www.flickr.com/photos/erix/6806010939/">by erix!, on Flickr</a></small>
 			</div>
 		</div>
