--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 							</tr>
 							<tr>
 								<td>Tips04-02-001</td>
-								<td>カスタマイズ可能なテーマを作成する</td>
+								<td>カスタマイズ可能なテーマを作成する<br /><small>GitHub上の<a href="https://github.com/concrete5japan/concrete5_japanese_book/tree/customizable-theme" target="_blank">customizable-theme</a>ブランチでカスタマイズ機能に対応させた場合のサンプルデータを公開しています。</small></td>
 								<td>169</td>
 							</tr>
 							<tr>
@@ -253,7 +253,7 @@
 								<td>204</td>
 							</tr>
 							<tr>
-								<td>Tips04−03−006</td>
+								<td>Tips04-03-006</td>
 								<td>ブロックテンプレートのカスタマイズに知っておくと便利なコードスニペット集</td>
 								<td>205</td>
 							</tr>
