--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <title>concrete5 公式活用ガイドブック サンプルデータダウンロード＆サポートページ</title>
 
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="style.css">
 
 </head>
@@ -46,6 +46,7 @@
 						<li><a href="#book">書籍情報</a></li>
 						<li><a href="#view">サンプルウェブサイトを実際に見る</a></li>
 						<li><a href="#download">データダウンロード</a></li>
+						<li><a href="#updates">訂正情報</a></li>
 						<li><a href="#movies">動画</a></li>
 						<li><a href="#license">ライセンス</a></li>
 						<li><a href="#tips-list">Tips一覧</a></li>
@@ -112,6 +113,13 @@
 					<p><iframe src="http://ghbtns.com/github-btn.html?user=concrete5japan&repo=concrete5_japanese_book&type=watch&count=true"
   allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe> <iframe src="http://ghbtns.com/github-btn.html?user=concrete5japan&type=follow&count=true"
   allowtransparency="true" frameborder="0" scrolling="0" width="165" height="20"></iframe></p>
+				</section>
+				<section id="updates">
+					<div class="page-header">
+						<h3>訂正情報</h3>
+					</div>
+					<iframe src="http://www.slideshare.net/slideshow/embed_code/35857979" width="512" height="421" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px 1px 0; margin-bottom:5px; max-width: 100%;" allowfullscreen></iframe>
+					<p><a href="https://www.slideshare.net/HishikawaTakuro/concrete5-5631" title="concrete5 5.6.3.1日本語版の紹介" target="_blank">concrete5 5.6.3.1日本語版の紹介</a> - 書籍で紹介しているバージョン5.6.2.1からの変更内容を紹介しています。</p>
 				</section>
 				<section id="movies">
 					<div class="page-header">
